--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How gratitude deepens your connection to now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -851,7 +851,7 @@
                     <div class="video-info">
                         <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1038,7 +1038,7 @@
                     <div class="video-info">
                         <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>How gratitude deepens your connection to now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9413,7 +9413,7 @@
                         <div class="video-info">
                             <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9435,7 +9435,7 @@
                         <div class="video-info">
                             <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
