--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>1 Message For All Children In The World | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -389,7 +389,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA IS BACK</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>1 Message For All Children In The World | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA IS BACK</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
