--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Steve Aoki @ UNTOLD Festival 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How gratitude deepens your connection to now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Transcending the Psyche</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>1 Message For All Children In The World | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>If You're Seeking Truth... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -378,7 +378,7 @@
                     <div class="video-info">
                         <h3>A warm goodbye from @sza   enroute to Philly for Ecstasy of Enlightenment | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>How gratitude deepens your connection to now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Transcending the Psyche</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>1 Message For All Children In The World | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>If You're Seeking Truth... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8026,7 +8026,7 @@
                         <div class="video-info">
                             <h3>A warm goodbye from @sza   enroute to Philly for Ecstasy of Enlightenment | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9402,7 +9402,7 @@
                         <div class="video-info">
                             <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Steve Aoki @ UNTOLD Festival 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
