--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How gratitude deepens your connection to now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>1 Message For All Children In The World | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2611,7 +2611,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 16.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 17, 2025</div>
                     </div>
                 </a>
             </div>
@@ -6645,7 +6645,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 16.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 17, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>How gratitude deepens your connection to now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>1 Message For All Children In The World | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
